[gd_scene load_steps=12 format=3 uid="uid://j3ty7qfi884i"]

[ext_resource type="Script" uid="uid://diwad6js70xt1" path="res://scripts/storm.gd" id="1_dl58t"]
[ext_resource type="Texture2D" uid="uid://hwpplo08h6d6" path="res://sprites/storm.png" id="1_iee56"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dl58t"]
atlas = ExtResource("1_iee56")
region = Rect2(0, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jbef"]
atlas = ExtResource("1_iee56")
region = Rect2(256, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e674d"]
atlas = ExtResource("1_iee56")
region = Rect2(512, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgu8t"]
atlas = ExtResource("1_iee56")
region = Rect2(768, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbh0h"]
atlas = ExtResource("1_iee56")
region = Rect2(1024, 0, 256, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgntl"]
atlas = ExtResource("1_iee56")
region = Rect2(1280, 0, 256, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h8hcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl58t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jbef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e674d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgu8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbh0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgntl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gr72"]
size = Vector2(252, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jbef"]
size = Vector2(318, 32)

[node name="CharacterBody2D" type="Area2D" groups=["storm"]]
z_index = 9
collision_layer = 4
collision_mask = 4
script = ExtResource("1_dl58t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h8hcv")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
z_index = 1
position = Vector2(-6, 0.5)
shape = SubResource("RectangleShape2D_4gr72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-35, 0)
shape = SubResource("RectangleShape2D_2jbef")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
